move fe plugin into analytics plugin for testing only,  we will use sql plugin. also remove "hub" plugin.
Signed-off-by: Marc Handalian <marc.handalian@gmail.com>